[package]
name = "syntax"
version = "0.1.0"
description = "Zeal syntax crate containing syntax related things: lexer, parser, ast."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.10"

[dev-dependencies]
pretty_assertions.workspace = true
indoc.workspace = true
